#export rust_toolchain=nightly-2021-09-27
#bash /root/05_rust.sh

[package]
name = "oramsgx"
version = "0.1.0"
authors = ["root"]
edition = "2018"

[dependencies]
mc-oblivious-ram = { path = "mc-oblivious-ram" }
aligned-cmov = "2.0.0"
mc-oblivious-traits = "2.0.0"
rand_core = "0.6.3"
rand_hc = "0.3.1"
mc-fog-ocall-oram-storage-trusted = { path = "mobilecoin/fog/ocall_oram_storage/trusted" }
mc-fog-ocall-oram-storage-untrusted = { path = "mobilecoin/fog/ocall_oram_storage/untrusted" }
mc-fog-ledger-enclave = { path = "ledgerenclave" }
mc-fog-ledger-enclave-impl = { path = "ledgerenclave/impl" }
mc-fog-ledger-enclave-api = { path = "ledgerenclave/api" }
mc-transaction-core = { path = "mobilecoin/transaction/core" }
mc-common = { path = "mobilecoin/common", features = ["log", "loggers"]}

[patch.crates-io]
schnorrkel-og = { git = "https://github.com/mobilecoinfoundation/schnorrkel.git", rev = "9b48418556b0af476be2313309bc5a23fb8b351d" }
ed25519-dalek = { git = "https://github.com/mobilecoinfoundation/ed25519-dalek.git", rev = "78bdc2a0b0af852cb4e47a0ca9be74bdf77c57b6" }

bulletproofs-og = { git = "https://github.com/mobilecoinfoundation/bulletproofs.git", rev = "675330c754f28876dbf94fc303fe73666cf8f8f4" }

mbedtls = { git = "https://github.com/mobilecoinofficial/rust-mbedtls.git", rev = "ce4cf3e4814e92734434c7deaa59d649d43f442d" }
mbedtls-sys-auto = { git = "https://github.com/mobilecoinofficial/rust-mbedtls.git", rev = "ce4cf3e4814e92734434c7deaa59d649d43f442d" }

cmake = { git = "https://github.com/alexcrichton/cmake-rs", rev = "5f89f90ee5d7789832963bffdb2dcb5939e6199c" }

packed_simd_2 = { git = "https://github.com/rust-lang/packed_simd.git", rev = "f60e900f4ceb71303baa37ff8b41ee7d490c01bf" }

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "my_benchmark"
harness = false