[package]
name = "mc-fog-ledger-enclave-impl"
version = "1.2.0-pre0"
authors = ["MobileCoin"]
edition = "2018"
description = '''
This crate contains the actual implementation of a ledger enclave.
'''
license = "GPL-3.0"

[dependencies]
# mobilecoin
mc-attest-core = { path = "../../mobilecoin/attest/core", default-features = false }
mc-attest-enclave-api = { path = "../../mobilecoin/attest/enclave-api", default-features = false }
mc-common = { path = "../../mobilecoin/common", default-features = false }
mc-crypto-ake-enclave = { path = "../../mobilecoin/crypto/ake/enclave", default-features = false }
mc-crypto-keys = { path = "../../mobilecoin/crypto/keys", default-features = false }
mc-crypto-rand = { path = "../../mobilecoin/crypto/rand" }
mc-sgx-compat = { path = "../../mobilecoin/sgx/compat", default-features = false }
mc-sgx-report-cache-api = { path = "../../mobilecoin/sgx/report-cache/api" }
mc-transaction-core = { path = "../../mobilecoin/transaction/core" }
mc-util-serial = { path = "../../mobilecoin/util/serial" }
mc-watcher-api = { path = "../../mobilecoin/watcher/api" }

# mc-oblivious
aligned-cmov = "2.0"
mc-oblivious-map = "2.0"
mc-oblivious-ram = "2.0"
mc-oblivious-traits = "2.0"

# fog
mc-fog-ledger-enclave-api = { path = "../api", default-features = false }
mc-fog-types = { path = "../../mobilecoin/fog/types" }
